--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"url": "https://github.com/alexcorvi/heic2any/issues"
 	},
 	"homepage": "https://github.com/alexcorvi/heic2any#readme",
-	"dependencies": {},
+	"dependencies": {
+		"cross-blob": "^2.0.0"
+	},
 	"devDependencies": {
 		"@types/buble": "^0.19.2",
 		"@types/chokidar": "^2.1.3",
